[gd_scene load_steps=5 format=3 uid="uid://dw3mev7tcxi1g"]

[ext_resource type="Script" uid="uid://c7cqku8y3gqll" path="res://entities/player_hud/player_hud_shop_weapon_buff.gd" id="1_8ob4s"]
[ext_resource type="FontFile" uid="uid://db4p37abih74f" path="res://assets/fonts/Sigmar/Sigmar-Regular.ttf" id="2_8frtw"]
[ext_resource type="Texture2D" uid="uid://kn7056lgxr3c" path="res://assets/gui/shop_items/shop_rubberband_gun_weapon.png" id="3_588h7"]
[ext_resource type="Texture2D" uid="uid://y4d8y0shhjm2" path="res://assets/gui/shop_items/shop_stapler_weapon.png" id="4_men1w"]

[node name="ShopWeaponBuff" type="CanvasLayer"]
script = ExtResource("1_8ob4s")

[node name="ColorRect2" type="ColorRect" parent="."]
offset_right = 1154.0
offset_bottom = 647.0
color = Color(0, 0, 0, 0.247059)

[node name="Label" type="Label" parent="ColorRect2"]
visible = false
layout_mode = 0
offset_left = 266.0
offset_top = 107.0
offset_right = 875.0
offset_bottom = 190.0
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_8frtw")
theme_override_font_sizes/font_size = 50
text = "Weapon Upgrade Shop"

[node name="TextureRect" type="TextureRect" parent="ColorRect2"]
offset_left = 213.0
offset_top = 133.0
offset_right = 469.0
offset_bottom = 389.0
texture = ExtResource("3_588h7")

[node name="TextureRect2" type="TextureRect" parent="ColorRect2"]
offset_left = 622.0
offset_top = 133.0
offset_right = 878.0
offset_bottom = 389.0
texture = ExtResource("4_men1w")

[node name="Next" type="Button" parent="."]
visible = false
offset_left = 138.0
offset_top = 475.0
offset_right = 565.0
offset_bottom = 571.0
size_flags_horizontal = 3
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_8frtw")
theme_override_font_sizes/font_size = 30
text = "Next Wave?"

[node name="Title" type="Button" parent="."]
visible = false
offset_left = 619.0
offset_top = 475.0
offset_right = 1046.0
offset_bottom = 571.0
size_flags_horizontal = 3
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_8frtw")
theme_override_font_sizes/font_size = 30
text = "Back to Title"

[node name="ButtonMinigun" type="Button" parent="."]
offset_left = 172.0
offset_top = 389.0
offset_right = 511.0
offset_bottom = 593.0
theme_override_fonts/font = ExtResource("2_8frtw")
theme_override_font_sizes/font_size = 25
text = "ANGER MANAGEMENT
Fires a thousand 
rubber bands a minute"

[node name="ButtonStapler" type="Button" parent="."]
offset_left = 586.0
offset_top = 386.0
offset_right = 932.0
offset_bottom = 590.0
theme_override_fonts/font = ExtResource("2_8frtw")
theme_override_font_sizes/font_size = 25
text = "STAPLER SHOTGUN
Swinglineâ„¢
A FPS staple"

[connection signal="pressed" from="Next" to="." method="_on_wave_again_pressed"]
[connection signal="pressed" from="Title" to="." method="_on_title_pressed"]
[connection signal="pressed" from="ButtonMinigun" to="." method="_on_button_minigun_pressed"]
[connection signal="pressed" from="ButtonStapler" to="." method="_on_button_stapler_pressed"]
